# statki

./: .gitignore  README.md  Statki.sln
103.4-statki/: 103.4-statki.sln  103.4-statki.vcxproj  CMakeLists.txt  ExtendedSeaBattle.h  Game.cpp  GameRules.cpp  GameRules.h  HumanPlayer.cpp  Player.cpp  Player.h  RandomPlayer.cpp  SeaBattle.cpp  SeaBattle.h
103.4-statki/app/: CMakeLists.txt  main.cpp  mapatest.txt  testmap2.txt  testsmap.txt
103.4-statki/lib/: AdvancedAIPlayer.cpp  AdvancedAIPlayer.h  CMakeLists.txt  CannotMoveToDestination.cpp  CannotMoveToDestination.h  CannotOpenFileError.cpp  CannotOpenFileError.h  Communicator.cpp  Communicator.h  Coordinates.cpp  Coordinates.h  ExtendedSeaBattle.cpp  Field.cpp  Field.h  Game.cpp  Game.h  HumanPlayer.cpp  HumanPlayer.h  Map.cpp  Map.h  MapReader.cpp  MapReader.h  Player.cpp  Player.h  PlayerAI.cpp  PlayerAI.h  RandomPlayer.cpp  RandomPlayer.h  Referee.cpp  Referee.h  Ship.cpp  Ship.h  Writer.cpp  Writer.h  WrongShootCoordinates.cpp  WrongShootCoordinates.h
103.4-statki/tests/: CMakeLists.txt  FieldTests.cpp  MapTests.cpp  PlayerTests.cpp  RandomPlayerTests.cpp  ShipTests.cpp  catch.hpp  svgTests.cpp
app/: main.cpp
